1.1.0
- added @JUte annotation
- added support of tests non marked by @Test annotation
- added support of parallel execution of tests
- minor improvements in logging

1.0.0
- initial version